--- a/Twitter-EventHubApp/Client-App/java/pom.xml
+++ b/Twitter-EventHubApp/Client-App/java/pom.xml
@@ -4,7 +4,19 @@
 	<groupId>com.org.simulation</groupId>
 	<artifactId>Twitter-EventHubApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Twitter-EventHubApp</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <name>Twitter-EventHubApp</name>
 	<description>Twitter-EventHubApp</description>
 	<dependencies>
 		<dependency>
